# riscv-cpp-simulator

./: CMakeLists.txt  LICENSE  README.md  test.s
include/: cpu.h  memory.h  registers.h
src/: cpu.cpp  main.cpp  memory.cpp  registers.cpp
tests/binaries/: test.elf
